--- a/frontend/src/components/HomePage.css
+++ b/frontend/src/components/HomePage.css
@@ -9,7 +9,7 @@
   
   .page-content {
     max-width: 700px;
-    margin: 0 auto; /* Center the content horizontally */
+    margin: 0 auto; 
   }
 
   .logo-banner {
@@ -20,12 +20,12 @@
     max-width: 10%;
     transform: translate(-50%, -50%);
     border-radius: 50%;
-    overflow: hidden; /* Ensure the shadow is applied to the circular shape */
-    transition: box-shadow 0.3s ease; /* Add transition for a smoother effect */
+    overflow: hidden;
+    transition: box-shadow 0.3s ease;
   }
   
   .logo-banner:hover {
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.5); /* Adjust the values as needed for a smoother shadow */
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
   }
   
   .recipe-tiles-container {
@@ -40,7 +40,6 @@
       margin-right: 5px;
     }
   
-  /* Adjust the layout for smaller screens */
   @media (max-width: 700px) {
     .left-tile,
     .right-tile {
