--- a/frontend/src/components/NavBar.css
+++ b/frontend/src/components/NavBar.css
@@ -35,7 +35,7 @@
   .NavBarButtons {
     display: flex;
     gap: 5px;
-    max-width: 700px; /* Set max width */
+    max-width: 700px;
     margin: 0 auto;  
   }
   
