--- a/frontend/src/components/DialogueBox.css
+++ b/frontend/src/components/DialogueBox.css
@@ -19,8 +19,7 @@
   height: 0;
   border-left: 10px solid transparent;
   border-right: 10px solid transparent;
-  border-bottom: 10px solid #1c3d5a; /* Change this line to border-bottom */
-  position: absolute; /* Change this line to absolute */
-  top: -10px; /* Adjust this value to position the arrow */
-  right: calc(50% - 10px); /* Center the arrow horizontally on the right */
+  border-bottom: 10px solid #1c3d5a;
+  top: -10px;
+  right: calc(50% - 10px);
 }
