--- a/frontend/src/components/LoginPopUp.css
+++ b/frontend/src/components/LoginPopUp.css
@@ -2,10 +2,13 @@
     position: relative;
     display: inline-block;
   }
+
+  .login-icon{
+    background-color: none;
+  }
   
   .login-button {
     padding: 8px 16px;
-    background-color: #3498db;
     color: #fff;
     border: none;
     cursor: pointer;
