--- a/frontend/src/components/RecipeFormPage.css
+++ b/frontend/src/components/RecipeFormPage.css
@@ -1,10 +1,12 @@
 /* src/RecipeFormPage.css */
 .recipe-form-page {
-    max-width: 400px;
-    margin: 0 auto;
-    padding: 20px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  }
+  max-width: 675px;
+  margin: 0 auto;
+  padding: 20px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  border-radius: 4px;
+  border: 2px dotted #000000; /* Add this line for dotted borders */
+}
   
   h1 {
     font-size: 24px;
