--- a/frontend/src/components/RecipePage.css
+++ b/frontend/src/components/RecipePage.css
@@ -6,6 +6,7 @@ body, * {
   .recipe-container {
     max-width: 1000px;
     margin: 0 auto;
+    margin-bottom: 10px;
     padding: 20px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     background-color: #f8f8f8;
@@ -13,6 +14,7 @@ body, * {
     border-color: #333;
     border-radius: 8px; /* You can adjust the radius as needed */
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    
 }
 
   
