--- a/frontend/src/Scroll.css
+++ b/frontend/src/Scroll.css
@@ -1,6 +1,20 @@
 /* Scroll.css */
+body {
+  overflow-y: scroll;
+}
+body::-webkit-scrollbar {
+  width: 12px; /* Adjust the width as needed */
+}
 
-::-webkit-scrollbar {
+body::-webkit-scrollbar-thumb {
+  background-color: #888; /* Color of the scrollbar thumb */
+}
+
+body::-webkit-scrollbar-track {
+  background-color: #f1f1f1; /* Color of the scrollbar track */
+}
+
+/* ::-webkit-scrollbar {
     width: 12px;
   }
   
@@ -16,5 +30,5 @@
   ::-webkit-scrollbar-track {
     background: #f1f1f1; 
     border-radius: 10px; 
-  }
+  } */
   
